# UdeCursos-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh
commands/: Cronjobs.py  add.py  admin.py  certs.py  get.py  getid.py  help.py  history.py  horario.py  juna.py  remove.py  replace.py  sched.py  source.py  start.py  version.py
components/: certs.py  dump.py  fetch.py  formatting.py  goodread.py  history.py  menujunaeb.py  modify_data.py
data/: certs.json  clippings.txt  history.json  old_certs.json  records.json
