[tool.poetry]
name = "UdeCursos Bot"
version = "1.8"
description = ""
authors = ["CxrlosKenobi <kenobi@ieee.org>", "AlbFR <AlbFR@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
